# releasegame

backend/: Dockerfile  pyproject.toml
backend/app/: settings.py
frontend/: Dockerfile  package-lock.json  package.json
